[gd_scene load_steps=12 format=3 uid="uid://ds4apf8k0rus7"]

[ext_resource type="Texture2D" uid="uid://e834udfo8n2w" path="res://Assets/angybee-Sheet.png" id="1_byqdg"]
[ext_resource type="Script" path="res://Scripts/enemy.gd" id="2_1pv8t"]
[ext_resource type="PackedScene" uid="uid://cud0a4ks7d7di" path="res://Scenes/grid_movement.tscn" id="3_hnqcx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rf3o5"]
atlas = ExtResource("1_byqdg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qxq2"]
atlas = ExtResource("1_byqdg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbqi4"]
atlas = ExtResource("1_byqdg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r70lv"]
atlas = ExtResource("1_byqdg")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xk0i"]
atlas = ExtResource("1_byqdg")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_r6uht"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rf3o5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qxq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbqi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r70lv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xk0i")
}],
"loop": true,
"name": &"walk_side",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_yhsns"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_w7but"]
radius = 96.3328

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("2_1pv8t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r6uht")
animation = &"walk_side"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yhsns")

[node name="GridMovement" parent="." node_paths=PackedStringArray("self_node") instance=ExtResource("3_hnqcx")]
self_node = NodePath("..")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_w7but")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
